Adding Admob Banner Ads into project

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:src="@drawable/app_logo" />
 
     <!--Ads-->
-    <!--<com.google.android.gms.ads.AdView
+    <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_width="220dp"
         android:layout_height="88dp"
@@ -27,7 +27,7 @@
         android:layout_marginTop="302dp"
         android:layout_marginBottom="269dp"
         app:adSize="BANNER"
-        app:adUnitId="ca-app-pub-5620654488810864/9428613635" />-->
+        app:adUnitId="ca-app-pub-5620654488810864/9428613635" />
     <!--Join Now button-->
     <Button
         android:id="@+id/join_now_btn"
